# Hackathon_Forgis_Dobot_URR

./: .env  .gitignore  README.md  docker-compose.yml  install_franky.sh
backend/: Dockerfile  pyproject.toml
backend/scripts/: start_backend.sh
backend/src/: main.py
backend/src/api/: __init__.py  app.py
backend/src/api/routes/: __init__.py  camera.py  flows.py  skills.py
backend/src/api/websocket/: __init__.py  events.py  manager.py
backend/src/data/flow/: custom_flow_1772360939618.json  custom_flow_1772361375861.json  custom_flow_1772361466392.json  custom_flow_1772361941843.json  custom_flow_1772362045835.json  custom_flow_1772362872677.json  custom_flow_1772363495961.json  custom_flow_1772363770611.json  custom_flow_1772364154370.json  dobot_test_pick.json  hand_pick_and_place.json  linear_control_motion.json  linear_then_joint_motion.json  move_forward_and_grasp.json  move_forward_and_open.json  moving_action.json  pick_and_place_v2.json  test_two_moves.json
backend/src/executors/: __init__.py  base.py  camera_executor.py  dobot_nova5_executor.py  hand_executor.py  io_executor.py  panda_executer.py  robot_executor.py
backend/src/flow/: __init__.py  conditions.py  executor.py  loader.py  manager.py  schemas.py
backend/src/nodes/: camera_bridge_node.py  camera_node.py  covvi_hand_node.py  dobot_nova5_node.py  panda_node.py  ur_node.py
backend/src/skills/: __init__.py  base.py  registry.py
backend/src/skills/camera/: __init__.py  get_bounding_box.py  get_label.py  start_streaming.py  stop_streaming.py
backend/src/skills/hand/: __init__.py  (+3 more)
(+72 files in other folders)
